## [x.x] - yyyy-mm-dd
### Fixed
- Fixed the mixed content warning for the Google Fonts API calls.
- Fixed the banner responsive JS on single posts
- Fixed the Isotope filtering using the Packery Library
- Changed the names of the Google Font Classes
- Stoped the page banner from showing on the Homepage if the Reading settings are set to show a static page. 
### Updated
- Isotope jQuery Library 2.1.1
### Added
- Packery jQuery Library 1.1.1


## [1.1] - 2015-02-19
### Changed
-
### Fixed
- 

## [1.0.9] - 2015-02-18
### Changed
- 
### Fixed
- 

## [1.0.8] - 2015-02-10
### Changed
- 
### Fixed
- 

## [1.0.7] - 2015-02-02
### Changed
- 
### Fixed
- 

## [1.0.6] - 2015-01-16
### Changed
- 
### Fixed
- 

## [1.0.4] - 2014-12-05
### Changed
- 
### Fixed
- 

## [0.1] - 2014-08-04
### Changed
- 
### Fixed
- 