@@ -21,8 +21,6 @@ require get_template_directory() . '/inc/template-tags.php';
 require get_template_directory() . '/inc/extras.php';
 require get_template_directory() . '/inc/wp_bootstrap_navwalker.php';
 
-
-
 /**
  * Returns an array of $controls for the customizer class to generate.
  *
@@ -55,7 +53,26 @@ function lsx_get_customizer_controls(){
 					'expanded',
 					'inline'
 			)
+	);
+	
+	/*
+	 * If the WP Translate plugin is active then display some controls for that.	
+	 * https://wordpress.org/plugins/wp-translate/	
+	 */
+	/// add the setting
+	$lsx_controls['settings']['lsx_wp_translate_location']  = array(
+			'default'       =>  '0', //Default setting/value to save
+			'type'        =>  'theme_mod', //Is this an 'option' or a 'theme_mod'?
+			'transport'     =>  'postMessage', //What triggers a refresh of the setting? 'refresh' or 'postMessage' (instant)?
 	);	
+	
+	/// add the control
+	$lsx_controls['fields']['lsx_wp_translate_location'] = array(
+			'label'         =>  __('Layout','lsx'),
+			'section'       =>  'title_tagline',
+			'type'   =>  'checkbox'
+	);
+	
 	
 	// add the slider if function exists
 	if(function_exists('soliloquy')){
