@@ -9,6 +9,7 @@
 - Isotope jQuery Library 2.1.1
 ### Added
 - Packery jQuery Library 1.1.1
+- WordPress Customizer options for controlling the layout of the header
 
 
 ## [1.1] - 2015-02-19
